Change of launcher icon. Change for customer branding. Fixed minor string warnings and app setup.